fix gallery overflow

--- a/app/styles/screen.sass
+++ b/app/styles/screen.sass
@@ -103,7 +103,6 @@ p
     float: left
     width: 100%
     margin: 30px 0
-    overflow: hidden
     .projectSlide
       margin: 0
       width: 100%
@@ -117,10 +116,11 @@ p
       display: block
       height: 100%
       width: 100%
+      overflow: hidden
       img
         float: left
         height: 100%
-        min-width: 100%
+        width: auto
     a:hover
       +opacity(.8)
       img
